fix contrast

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -362,5 +362,5 @@ fieldset .membership {
     text-align: center;
     /* font-family: Geneva, Verdana, sans-serif; */
     /* color: #BC4749; */
-    color: rgb(14, 173, 51);
+    color: #BC4749;
 }
